src/rpocore/static/css/campaign.css
.justify {
    text-align: justify;
}
.progress {
    padding-left: 0;
    padding-right: 0;
}
.supporterLabel {
    width: 80px;
    min-width: 80px;
}
.supporterPanel {
    max-width: 400px;
    display: inline-block;
}
.statisticsLabel {
    width: 400px;
    min-width: 400px;
}

